# Projet_C_dictionnaire

./: CMakeLists.txt  README.md  adj.c  adj.h  adv.c  adv.h  aleatoire.c  aleatoire.h  convert.c  convert.h  couper.c  couper.h  gigi's_main.c  gigi's_main.h  lecture.c  lecture.h  liste_lettre.c  liste_lettre.h  main.c  menu.c  menu.h  node_letter.c  node_letter.h  node_letter_nom.c  node_letter_nom.h  nolan.c  nolan.h  nom.c  nom.h  romain's_main.c  romain's_main.h  ver.c  ver.h
functions/: adj.c  adv.c  nom.c  ver.c
genere_phrase/functions/: aleatoire.c  convert.c
genere_phrase/header/: aleatoire.h
gere_mot_flechis/functions/: adj.c  adv.c  nom.c  ver.c
gestion_des_node/functions/: liste_lettre.c  node_letter.c
gestion_des_node/header/: node_letter.h
gestion_mot_flechis/functions/: adj.c  adv.c  nom.c  ver.c
gestion_mot_flechis/header/: adj.h  nom.h  ver.h
gestion_txt/functions/: couper.c  lecture.c
gestion_txt/header/: couper.h  lecture.h
headers/: adj.h  adv.h  nom.h  ver.h
