cmake_minimum_required(VERSION 3.22)
project(Projet_C_dictionnaire C)

set(CMAKE_C_STANDARD 99)

add_executable(Projet_C_dictionnaire main.c gigi's_main.c gigi's_main.h couper.c couper.h lecture.c lecture.h aleatoire.c aleatoire.h liste_lettre.c liste_lettre.h node_letter_nom.c node_letter_nom.h romain's_main.c romain's_main.h gere_node/functions/adj.c gere_node/header/adj.h gere_node/functions/adv.c gere_node/header/adv.h gere_node/functions/nom.c gere_node/header/nom.h gere_node/functions/ver.c gere_node/header/ver.h)
