cmake_minimum_required(VERSION 3.22)
project(Projet_C_dictionnaire C)

set(CMAKE_C_STANDARD 99)

add_executable(Projet_C_dictionnaire main.c gigi's_main.c gigi's_main.h couper.c couper.h lecture.c lecture.h aleatoire.c aleatoire.h liste_lettre.c liste_lettre.h node_letter.c node_letter.h romain's_main.c romain's_main.h adj.c adj.h adv.c adv.h nom.c nom.h ver.c ver.h convert.c convert.h)
